src/input.css
@import url("https://fonts.googleapis.com/css2?family=Marck+Script&family=Share+Tech+Mono&display=swap");

@tailwind base;
@tailwind components;
@tailwind utilities;

body {
  background-color: #2e0f38;
  /* color: #4d7b93; */
}

.main {
  background-color: rgba(181, 93, 187, 0.199);
  position: relative;
}

.links:hover {
  text-shadow: 1px 1px 5px#0f766e;
}

.nav {
  text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.253);
}

.dropdown {
  position: relative;
  display: inline-block;
}

.dropdown-content {
  display: none;
  background: transparent;
  margin-bottom: 3rem;
}

h2:hover,
.dropdown:hover .dropdown-content {
  display: block;
  cursor: pointer;
  margin-left: -2rem;
}

.nav:hover {
  cursor: pointer;
}

.arrow {
  text-shadow: 1px 1px 5px#0f766e;
}

main::before {
  background-image: url(../images/nums-and-ones.png);
  opacity: 0.1;
  content: "";
  position: absolute;
  top: -3rem;
  bottom: 0;
  right: 0;
  left: 0;
  background-repeat: repeat;
  z-index: -3;
}

.my-skills,
.languages,
.frameworks {
  background-color: rgba(181, 93, 187, 0.212);
}

.main-heading {
  background: -webkit-linear-gradient(50deg, #be185d, #0f766e);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  -webkit-text-stroke-width: 1px;
  -webkit-text-stroke-color: rgba(0, 0, 0, 0.692);
  text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.233);
  filter: brightness(1.75);
}

.syntax {
  width: 2rem;
}

.talents-list {
  @apply text-gray-300 align-middle px-2 font-body w-9/12 2xl:w-10/12 py-2;
}

/* SKILLS BARS WITH KEYFRAMES */
/* .wrapper{
  position: absolute;
  transform: translate(-50%,-50%);
  left: 50%;
  top: 50%;
}
.container{
  width: 100%;
  padding: 30px 30px 50px;
  background-color: white;
  border: 2px solid rgba(255,255,255,0.06);
  border-radius: 10px;
  box-shadow: 0 20px 30px rgba(0,0,0,0.2);
  backdrop-filter: blur(10px);
} 
.container *{
  font-family: "Poppins",sans-serif;
  color: black;
  font-weight: 500;
}
h2{
  margin-bottom: 50px;
  letter-spacing: 2px;
  text-align: center;
  font-size: 33px;
  font-weight: bold;
} */
.skills:not(:last-child) {
  margin-bottom: 30px;
}
.details {
  width: 100%;
  display: flex;
  justify-content: space-between;
}
.bar {
  position: relative;

  border: 2px solid #2e0f3863;

  border-radius: 20px;
}
.bar div {
  position: relative;
  width: 0;
  height: 9px;
  border-radius: 10px;
  background-image: linear-gradient(45deg, #b45dbb, #be185d);
}
#html-bar {
  animation: html-fill 2s forwards;
}
@keyframes html-fill {
  100% {
    width: 80%;
  }
}
#css-bar {
  animation: css-fill 2s forwards;
}
@keyframes css-fill {
  100% {
    width: 60%;
  }
}
#js-bar {
  animation: js-fill 2s forwards;
}
@keyframes js-fill {
  100% {
    width: 30%;
  }
}

